[package]
name = "lvgl-font-bridge"
version = "0.1.0"
edition = "2024"

[features]
default = []
macros = ["dep:lvgl-font-bridge-macros"]

[dependencies]
embedded-graphics = { version = "0.8.2", default-features = false }
lvgl-font-bridge-macros = { path = "lvgl-font-bridge-macros", optional = true }

[[test]]
name = "macro"
path = "tests/macro.rs"
required-features = ["macros"]
